--- a/mandatory1/Web.config
+++ b/mandatory1/Web.config
@@ -59,8 +59,8 @@
         <add key="log4net.Config" value="config\log4net.config" />
         <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
 
-        <add key="Umbraco.ModelsBuilder.Enable" value="true" />
-        <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
+      <add key="Umbraco.ModelsBuilder.Enable" value="true" />
+      <add key="Umbraco.ModelsBuilder.ModelsMode" value="Dll" />
 
     </appSettings>
     <connectionStrings>
@@ -85,9 +85,7 @@
             you must configure your SMTP host here - for example:
 -->
           <smtp>
-            <network host="smtp.gmail.com" port="587" enableSsl="true"
-            defaultCredentials="false" userName="iamjushereforfun@gmail.com"
-            password="AA12tmrr200695"/>
+            <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="iamjushereforfun@gmail.com" password="AA12tmrr200695" />
           </smtp>
 
 
